# cs521mp3

./: CMakeLists.txt  README.md  dual_gtest.cpp  dual_number.h  dual_test.cpp  dual_vector.h  plot_overhead.py
quantization/: .gitignore  binary_search.py  export_pytorch_weights.py  list_params.py  plot_prunned.py  prune_layers.py  prune_results.csv  quantization.py  resnet_torch.py
quantization_jax/: hlo_fp32.txt  load_pytorch_weights.py  quantize_jax.ipynb  quantize_jax.py  resnet18_jax.py  resnet18int.py  stats.py  test_resnet_jax.py
reverse_mode/: compute_gradients.py  hlo_code.py  jit_compile.py  vmap.py
